--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: java
 jdk:
   - oraclejdk8
 
-before_install:
-  - chmod a+x gradlew
+#before_install:
+#  - chmod a+x gradlew
 
 script: ./gradlew build
